tests/files/lexer_tests/should_fail/071.cmdr
a = "Unterminated format string ${3 + 5 right here";